ikinci qezelli elave etdim

--- a/home.html
+++ b/home.html
@@ -9,6 +9,11 @@
     <h1>
         salammm
     </h1>
+    <h2>Dünya bu nazənin mələyin həsrətin çəkir,
+        Xəlqin sevimli afəti, həm şəhriyarıdır.
+        
+        Yüz dəfə yansaq eşqi oduna, qorxu bilmərik,
+        Çünki diyarımız bizim Odlar diyarıdır!</h2>
     
 </body>
 </html>
